Fixed logo in header on mobile devices.

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -452,6 +452,7 @@ input[type="color"]:focus,
 
 #header.heading{
 	position: relative;
+  margin-top: 20px;
 	min-height: 200px;
 	padding-top: 40px;
 	padding-bottom: 40px;
